# projekt-gruppe-21-2023

./: CMakeLists.txt  makefile
database/: booking.csv  contact.csv  restaurant.csv
doc/: datastructure.md  projectGuidelines.md
include/: booking.h  contacTracing.h  contact.h  filehandeling.h  main.h  parser.h  restaurant.h  structhandeling.h
src/: booking.c  booking.d  contact.c  contact.d  contactTracing.c  contactTracing.d  filehandeling.c  filehandeling.d  interface.d  main.c  main.d  parser.c  parser.d  restaurant.c  restaurant.d  structhandeling.c  structhandeling.d
test/: bookingTest.cpp  contactTest.cpp  restaurantTest.cpp
